--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.0"
 
 services:
   insights5-blog:
-    image: jekyll/jekyll:latest
+    image: jekyll/jekyll:3.8
     container_name: insights5-blog
     volumes:
       - .:/srv/jekyll
