--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings   
 locale                   : "en-US"
-title                    : "Data Driven Entrapreneurship"                  
+title                    : "Find Business Ideas with Data"                  
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "insights5.com"
-description              : "Data Driven Entrepreneurship"
+description              : "Find Business Ideas with Data"
 url                      : "https://insights5.com"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                 : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+logo                     : /assets/img/logo.jpg
+masthead_title           : "  "
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -94,8 +94,8 @@ analytics:
 # Site Author
 author:
   name             : "Jens Laufer"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data Scientist"
+  avatar           : https://res.cloudinary.com/jenslaufer/image/upload/c_scale,w_100/v1550571220/Jens_Laufer-13-1.jpg
+  bio              : "Founder of Insights5"
   location         : "Germany"
   email            :
   links:
@@ -107,7 +107,7 @@ author:
       url: "http://jenslaufer.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://twitter.com/jenslaufer"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -277,8 +277,9 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: true
       comments: # true
       share: true
       related: true
+
