--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
   only: source
 
 script:
+  - sudo apt update && sudo apt install libgit2-dev
   - Rscript -e 'devtools::install_github("bbc/bbplot", force=T)'
   - Rscript -e 'servr:::knit_maybe(c(".", "_source", "_posts"), c(".", "_posts", "_posts"), "build.R", "jekyll")'
 
